--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -3,6 +3,6 @@
 {% block content %}
   <h1>Публикации в категории - {{ category }}</h1>
   {% if posts %}
-    {% include "blog/posts_list.html" %}
+    {% include "blog/includes/posts_list.html" %}
   {% endif %} 
 {% endblock %}
