--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -2,5 +2,5 @@
 {% block title %} Лента записей {% endblock %}
 {% block content %}
   <h1>Лента записей</h1>                        
-  {% include "blog/posts_list.html" %}
+  {% include "blog/includes/posts_list.html" %}
 {% endblock %}
